Ajustes css tabs responsive

--- a/src/estilosNuevos.css
+++ b/src/estilosNuevos.css
@@ -317,6 +317,9 @@ img.Modulos {
     .interna h5 {
         font-size: 16px;
     }
+    #Tabs button {
+        min-width: 100%;
+    }
 }
 @media (min-width: 576px) {
     .Megamenu .logo {
@@ -392,6 +395,12 @@ img.Modulos {
     }
     #Tabs .Espaciado {
         margin-top: 42px;
+    }
+    #Tabs button {
+        max-width: 360px;
+    }
+    .css-sbio02-MuiTabs-root {
+        margin-top: 11px;
     }
 }
 @media (min-width: 992px) {
