Ajustes en autenticación de usuario - login Energía de Bogotá

--- a/src/main.css
+++ b/src/main.css
@@ -2844,4 +2844,7 @@ h3.warningNote {
     #Tabs ol {
         font-size: 18px;
     }
+    .indicatorCard h1 {
+        font-weight: 200;
+    }
 }
